[Qt] Failing test media/video-document-types.html https://bugs.webkit.org/show_bug.cgi?id=62108

Patch by Deepak Sherveghar <bpwv64@motorola.com> on 2011-11-02
Reviewed by Simon Hausmann.

Match what Mac has been doing since r36001: cancel the main load,
and handle failures caused by 'will be handled by plugin' errors.

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::committedLoad):
(WebCore::FrameLoaderClientQt::shouldFallBack):

Canonical link: https://commits.webkit.org/87664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99071 268f45cc-cd09-0410-ab3c-d52691b4dbfc